--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     // return decimalPointCalculate(Math.sqrt(f1), decimalPoint)
                     return decimalPointCalculate(Math.sqrt(f1) + 0.01, decimalPoint)
                 case 'square':
-                    return decimalPointCalculate(f1 * f1, decimalPoint)
+                    return decimalPointCalculate(f1 ** f2, decimalPoint)
                 default :
                     return 'UnSupport'
             }
@@ -73,7 +73,7 @@
     <option id="multiply" value="multiply">×</option>
     <option id="mod" value="mod">÷</option>
     <option id="sqrt" value="sqrt">√</option>
-    <option id="square" value="square">x²</option>
+    <option id="square" value="square">x^n</option>
 </select>
 <label for="second"></label><input type="text" id="second">
 <input type="button" id="execute" value="=" onclick="f()">
